tests/NormalTests/paczka1/fuzzy1/49117256.err
Error in line 4: NoW A413 45,67
Error in line 8: RIw422obkt S476 23,5
Error in line 17: RIw422obkt S476 17,4
Error in line 12: Ywi A413 19,6
Error in line 33: NoW S641 17,7
Error in line 34: NoW S323 79,0
Error in line 38: Ywi S476 28,7
